# panel4-lab

./: .gitignore  Dockerfile  README.md  benchmark.sh  fly.toml  go.mod  go.sum  http_benchmark.js  pyproject.toml  server.go  visualize_benchmark.py
cloudflare/: package-lock.json  package.json  wrangler.toml
cloudflare/src/: worker.js
cmd/httpbench/: main.go
cmd/image_downloader/: main.go
scripts/: network_control.sh  visualize_benchmark.py
static/: app.js  benchmark.html  index.html
