[project]
name = "http-benchmark-visualizer"
version = "0.1.0"
description = "Visualization tools for HTTP protocol benchmark results"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8.0", "numpy>=1.26.0"]

[dependency-groups]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
